<resources>
    <string name="app_name">SmartCity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OnBoard !</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_event">Mes évènements</string>
    <string name="menu_message">Messagerie</string>
    <string name="menu_search_event">Rechercher un évènement</string>
    <string name="login_welcome">Bienvenue dans l\'application OnBoard ! </string>
    <string name="login_email">Votre email : </string>
    <string name="login_password">Votre mot de passe : </string>
    <string name="login_button">Se connecter</string>
    <string name="list">Liste</string>
    <string name="map">Map</string>
    <string name="join">Rejoindre</string>
    <string name="name">Nom :</string>
    <string name="firstname">Prénom :</string>
    <string name="creationDate">Date de création :</string>
    <string name="eventDate">Date de l\'évènement :</string>
    <string name="address">Addresse :</string>
    <string name="gameCategoryLabel">Nom Catégorie :</string>
    <string name="gameCategoryDescription">Description Catégorie :</string>
    <string name="eventDescription">Description de l\'évènement :</string>
    <string name="nb_player">Nombre de joueurs :</string>
    <string name="joined_events">Evenements rejoints</string>
    <string name="my_events">Mes evenements</string>
    <string name="log_out">Déconnexion</string>
    <string name="birthdate">Date de naissance</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe </string>
    <string name="createEvent">Créer un évènement</string>
    <string name="category">Catégorie :</string>
    <string name="nbMaxPlayer">Nombre de joueur :</string>
    <string name="street">Rue :</string>
    <string name="number">Numéro :</string>
    <string name="city">Ville :</string>
    <string name="postCode">Code postal :</string>
    <string name="country">Pays :</string>
    <string name="event_full">L\'évènement est complet ou vous êtes déjà inscrits</string>
    <string name="event_already_in">Vous êtes déjà inscrits à l\'évènement</string>
    <string name="error_appear">Une erreur est apparue</string>
    <string name="login">Connection</string>
    <string name="bad_credentials">Identifiants invalides</string>
    <string name="account_created">Votre compte a bien été créé</string>
    <string name="no_connection">Pas de connection</string>
    <string name="event_creation">Créaction d\'évènement</string>
    <string name="details">Détails</string>
    <string name="invalid_description">Description invalide></string>
    <string name="invalid_nbPlayer">Nombre de joueur invalide></string>
    <string name="invalid_street">Rue invalide</string>
    <string name="invalid_number">Numéro invalide</string>
    <string name="invalid_city">Ville invalide</string>
    <string name="invalid_postCode">Code postal invalide</string>
    <string name="invalid_country">Pays invalide</string>
    <string name="quit_event">Quitter l\'événement</string>
    <string name="server_error">Erreur serveur</string>
    <string name="event_created">L\'évènement a été créé</string>
    <string name="is_verified">Est vérifié :</string>
    <string name="admin_note">Note de l\'admin :</string>
    <string name="delete">Supprimer</string>
    <string name="accept_update">Mettre à jour</string>
    <string name="register">S\'inscrire</string>
    <string name="cancel">Annuler</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="no_event_found">Aucun évènement n\'a été trouvé</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_firstName">Prenom invalide</string>
    <string name="prompt_email">Email</string>
    <string name="invalid_lastName">Nom invalide</string>
    <string name="invalid_date">Date non valide</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenue "</string>
    <string name="invalid_email">Addresse email invalide</string>
    <string name="invalid_password">Le mot de passe doit contenir plus de 5 catacts</string>
    <string name="login_failed">"Login failed"</string>
</resources>