<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".view.fragments.MyEventListFragment">

<com.google.android.material.tabs.TabLayout
    android:id="@+id/tab_layout_my_events"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.tabs.TabItem
        android:id="@+id/my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_events" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/joined_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joined_events" />
</com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_event_list"
        android:layout_width="match_parent"
        android:layout_height="550dp" />

    <Button
        android:id="@+id/my_event_create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createEvent" />

</LinearLayout>