<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventCategoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/eventToUpdateCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDate" />

            <DatePicker
                android:id="@+id/eventToUpdateDatePicker"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdateDescription"
                android:text="@string/eventDescription" />

            <EditText
                android:id="@+id/eventToUpdateDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventStreetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/eventToUpdateStreet"
                android:text="@string/street" />

            <EditText
                android:id="@+id/eventToUpdateStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventStreetNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdateStreetNumber"
                android:text="@string/number" />

            <EditText
                android:id="@+id/eventToUpdateStreetNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdateCity"
                android:text="@string/city" />

            <EditText
                android:id="@+id/eventToUpdateCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updateEventPostalCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdatePostalCode"
                android:text="@string/postCode" />

            <EditText
                android:id="@+id/eventToUpdatePostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventCountryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdateCountry"
                android:text="@string/country" />

            <EditText
                android:id="@+id/eventToUpdateCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateEventNbPlayerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/eventToUpdatePlayerNumber"
                android:text="@string/nbMaxPlayer" />

            <EditText
                android:id="@+id/eventToUpdatePlayerNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/updateEventCancelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/updateEventConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@android:string/ok" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
