<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creator_firstname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/firstname"
            app:layout_constraintBottom_toTopOf="@+id/creation_date_label"
            app:layout_constraintEnd_toStartOf="@+id/creator_firstname"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/search_creator_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/creator_firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.489" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creator_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/creator_firstname_label"
            app:layout_constraintEnd_toStartOf="@+id/creator_name"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/creator_firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.489" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_description_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/eventDescription"
            app:layout_constraintBottom_toTopOf="@+id/nb_player_label"
            app:layout_constraintEnd_toStartOf="@+id/event_description_details"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_description_details"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/nb_player"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/gameCategoryLabel"
            app:layout_constraintBottom_toTopOf="@+id/game_category_description_label"
            app:layout_constraintEnd_toStartOf="@+id/game_category_name_details"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/game_category_name_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/game_category_description"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_category_description_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/gameCategoryDescription"
            app:layout_constraintBottom_toTopOf="@+id/event_description_details_label"
            app:layout_constraintEnd_toStartOf="@+id/game_category_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/game_category_description"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/event_description_details"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creation_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/creationDate"
            app:layout_constraintBottom_toTopOf="@+id/event_date_details_label"
            app:layout_constraintEnd_toStartOf="@+id/creation_date"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/creation_date"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/event_date_details"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_date_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/eventDate"
            app:layout_constraintBottom_toTopOf="@+id/complete_address_label"
            app:layout_constraintEnd_toStartOf="@+id/event_date_details"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_date_details"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/complete_address"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/complete_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/game_category_label"
            app:layout_constraintEnd_toStartOf="@+id/complete_address"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/complete_address"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/game_category_name_details"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nb_player_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="45dp"
            android:text="@string/nb_player"
            app:layout_constraintBottom_toTopOf="@+id/join_button"
            app:layout_constraintEnd_toStartOf="@+id/nb_player"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nb_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/join_button"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>